--- a/frontend/src/Components/Layouts/ToastContainerBox/style.css
+++ b/frontend/src/Components/Layouts/ToastContainerBox/style.css
@@ -1,10 +1,14 @@
 .Toastify__toast-body {
-    font-family: "Noto Sans JP", sans-serif !important;
+    font-family: "Roboto", sans-serif !important;
     font-weight: 400;
-    color: black;
+    color: #f43397;
+    background-color: #f4339715;
+    margin: 0;
+    letter-spacing: 0.2px;
 }
 
 .Toastify__toast{
     box-shadow: none;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid #f4339710;
+    padding: 0;
 }
