--- a/frontend/src/Components/User/LoginSignup/style.css
+++ b/frontend/src/Components/User/LoginSignup/style.css
@@ -2,59 +2,60 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(255, 255, 255);
-    min-height: calc(100vh - 92px);
+    background-color: #ffffff;
+    min-height: calc(100vh - 110px);
 }
 
 .LoginSignUpBox {
-    background-color: rgb(255, 255, 255);
     width: 400px;
     height: 550px;
     margin: 50px auto;
     box-sizing: border-box;
     overflow: hidden;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 11px;
+    border-radius: 1px;
+    background: #cf559210;
 }
 
 .login_signUp_toggle {
     display: flex;
-    height: 50px;
+    height: 100%;
+    border-bottom: 1px solid #d5629c20;
 }
 
 .login_signUp_toggle p {
-    color: rgba(0, 0, 0);
-    font-size: 18px;
-    font-weight: 400;
-    font-family: "Noto Sans JP", sans-serif;
+    color: #252525;
+    font-family: "Roboto", sans-serif;
     transition: all 0.5s;
     cursor: pointer;
     display: grid;
-    padding-top: 3px;
     place-items: center;
     width: 100%;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.4px;
+    padding-top: 4px;
 }
 
 .LoginSignUpBox .buttonsBox{
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    position: relative;
+    height: 70px;
 }
 
 .LoginSignUpBox .buttonsBox button {
-    background-color: rgb(255, 255, 255);
-    height: 1px;
-    width: 50%;
+    background-color: transparent;
+    height: 0px;
+    width: 50%; 
     border: none;
     transition: all 0.5s;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-    position: relative;
-    top: 3px;
+    border-bottom: 1px solid #b4739325;
+    position: absolute;
+    bottom: 0px;
 }
 
 .loginForm,
 .signupForm {
     width: 100%;
     height: 100%;
-    background-color: rgb(255, 255, 255);
     box-sizing: border-box;
     padding: 15px 29px;
     display: flex;
@@ -67,8 +68,8 @@
     transform: translateY(-100%) translateX(-100vmax);
 }
 
-.loginForm>div,
-.signupForm>div {
+.loginForm div,
+.signupForm div {
     display: flex;
     width: 100%;
     align-items: center;
@@ -93,22 +94,31 @@
     width: 100%;
     margin-top: calc(30px / 2);
     margin-bottom: calc(30px / 2);
-    font-family: "Noto Sans JP", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
-
+ 
 .loginEmail input,
 .loginPassword input,
 .signupName input,
 .signupEmail input,
 .signupPassword input {
-    border: 1px solid #87878730;
-    border-radius: 3px;
-    background-color: transparent;
+    border: none;
+    border-radius: 1px;
     height: 55px;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     padding: 0px 10px;
-    color: rgba(0, 0, 0, 0.9);
+    color: #252525;
+    letter-spacing: 0.2px;
+    background: #dd509710;
+}
+
+.loginEmail input::placeholder,
+.loginPassword input::placeholder,
+.signupName input::placeholder,
+.signupEmail input::placeholder,
+.signupPassword input::placeholder {
+    color: #2f2f2f;
 }
 
 .loginEmail input:focus,
@@ -127,13 +137,14 @@
 }
 
 .loginSubmitBtn a {
-    color: rgba(0, 0, 0, 0.6);
+    color: #252525;
     margin-bottom: 20px;
     margin-top: 10px;
     font-weight: 400;
-    font-family: "Noto Sans JP", sans-serif;
-    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
     text-decoration: none;
+    letter-spacing: 0.2px;
 }
 
 .signupSubmitBtn {
@@ -144,25 +155,22 @@
 
 .loginSubmitBtn input,
 .signupSubmitBtn input {
-    background-color: rgb(224, 223, 223);
-    border: none;
-    font-family: "Noto Sans JP", sans-serif;
-    color: rgba(0, 0, 0);
-    font-size: 17px;
-    font-weight: 500;
-    padding: 7px 0px 10px 0px;
     width: 120px;
-    height: 50px;
-    text-align: center;
-    border-radius: 2px;
+    color: #252525;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    background-color: #dd509720;
+    padding: 15px 15px;
+    border: none;
     cursor: pointer;
+    letter-spacing: 0.4px;
 }
 
-.registerImage > img {
+.registerImage img {
     min-width: 55px;
     max-width: 55px;
     height: 55px;
-    border: 1px solid #87878721;
     border-radius: 50%;
     object-fit: cover;
     outline: none;
@@ -176,30 +184,29 @@
     margin-bottom: 40px;
 }
 
-.registerImage>input {
+.registerImage input {
     display: flex;
     padding: 0 !important;
     margin: 0 !important;
     width: max-content;
     width: 100%;
 }
-
-.registerImage>input::file-selector-button {
-    cursor: pointer;
+ 
+.registerImage input::file-selector-button {
     width: 100%;
-    z-index: 2;
     height: 55px;
-    border: none;
-    margin: 0;
-    padding: 0;
-    font-family: "Noto Sans JP", sans-serif;
-    font-size: 17px;
-    font-weight: 500;
-    color: rgba(0, 0, 0, 0.6);
     padding-bottom: 2px;
-    border: 1px solid #87878730;
-    background-color: transparent;
-    border-radius: 3px;
+    z-index: 2;
+    border: none;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #252525;
+    background-color: #dd509710;
+    cursor: pointer;
+    border: none;
+    border-radius: 1px;
+    letter-spacing: 0.2px;
 }
 
 .shiftToLeft {
@@ -216,4 +223,10 @@
 
 .shiftToRight {
     transform: translateX(100%);
+}
+ 
+@media screen and (max-width: 600px) {
+    .LoginSignUpBox {
+        margin: 15px 15px;
+    }
 }
