--- a/frontend/src/Components/User/ForgotPassword/style.css
+++ b/frontend/src/Components/User/ForgotPassword/style.css
@@ -35,13 +35,12 @@
     display: grid;
     place-items: center;
     width: 100%;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: 0.4px;
-    padding-top: 4px;
+    padding-top: 8px;
     text-align: center;
-    margin: 0;
-    margin-bottom: 10px;
+    padding-bottom: 12px;
 }
 
 .forgotPasswordInput {
@@ -82,7 +81,7 @@
     width: 120px;
     color: #252525;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 600;
     font-family: "Roboto", sans-serif;
     background-color: #dd509720;
     padding: 15px 15px;
